examples/test/testpolicy18033.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18033
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key48: value12
      key32: value23
      key27: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value48
      podSelector:
        matchLabels:
          key18: value47
          key33: value14
